--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,1 +1,292 @@
-/*# sourceMappingURL=index.css.map */
+@font-face {
+  font-family: "Allura";
+  src: url(../fonts/Allura-Regular.ttf);
+}
+@font-face {
+  font-family: "Poppins";
+  src: url("../fonts/Poppins-Medium.ttf");
+}
+@font-face {
+  font-family: "Roboto";
+  src: url(../fonts/Roboto-Light.ttf);
+}
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+li {
+  list-style: none;
+}
+
+body {
+  text-align: center;
+  font-family: Roboto;
+  background: #21201e;
+}
+
+header {
+  background: url(../img/bg-slider-06.jpg) center/cover;
+  padding: 0 50px;
+  color: #eee;
+}
+header nav {
+  height: 12vh;
+  display: grid;
+  grid-template-columns: 10% 82% 8%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 1100px;
+  margin: 0 auto;
+}
+header nav .logo {
+  font-family: Allura;
+  font-weight: 100;
+  font-size: 2rem;
+  text-align: left;
+}
+header nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  text-transform: uppercase;
+  font-size: 0.7rem;
+  padding: 0 30px;
+}
+header nav li {
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
+}
+header nav li:hover {
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+  background-color: rgb(221, 180, 145);
+  border: 1px solid #eee;
+  border-radius: 15px;
+}
+header nav .nav-icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  font-size: 0.8rem;
+}
+header nav .nav-icons i {
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+  cursor: pointer;
+}
+header nav .nav-icons i:hover {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+}
+header .header-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 88vh;
+}
+header .header-text div {
+  margin-top: -150px;
+}
+header .header-text div h2 {
+  font-family: Allura;
+  font-size: 3.5rem;
+  font-weight: 100;
+  color: rgb(221, 180, 145);
+  text-shadow: 0px 2px 5px #21201e;
+}
+header .header-text div h1 {
+  font-size: 4.5rem;
+  letter-spacing: 10px;
+  font-weight: 700;
+  margin-top: -28px;
+  font-family: Poppins;
+  -webkit-box-shadow: 0px 1px 10px rgb(221, 180, 145);
+          box-shadow: 0px 1px 10px rgb(221, 180, 145);
+}
+header .header-text div img {
+  height: 50px;
+  margin: 20px 0;
+  border-radius: 150px;
+  border: 1px solid rgb(221, 180, 145);
+  -webkit-box-shadow: 0px 1px 10px #eee;
+          box-shadow: 0px 1px 10px #eee;
+  background: #21201e;
+}
+header .header-text div h6 {
+  font-size: 1rem;
+  letter-spacing: 6px;
+  font-weight: 200;
+  padding: 10px;
+  border: 1px solid rgb(221, 180, 145);
+  text-shadow: 1px 1px 2px #21201e;
+  -webkit-box-shadow: 0px 1px 10px #eee;
+          box-shadow: 0px 1px 10px #eee;
+  background: #21201e;
+}
+
+.section1 {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  background: #eee;
+}
+.section1 .intro-text {
+  margin: 15px;
+  padding: 30px 15px;
+  border: 1px dashed rgb(221, 180, 145);
+}
+.section1 .intro-text h2 {
+  color: rgb(221, 180, 145);
+  font-family: Allura;
+  font-size: 2rem;
+  font-weight: 500;
+}
+.section1 .intro-text h3 {
+  margin-top: -12px;
+  font-family: Poppins;
+}
+.section1 .intro-text img {
+  margin: 26px;
+}
+.section1 .intro-text img:nth-of-type(2) {
+  height: 70px;
+  border-radius: 150px;
+  border: 1px solid rgb(221, 180, 145);
+  margin-bottom: 8px;
+}
+.section1 .intro-text h4 {
+  font-family: Poppins;
+  font-weight: 100;
+}
+.section1 .intro-text h5 {
+  color: rgb(182, 182, 182);
+  font-size: 0.7rem;
+}
+.section1 .intro-pic {
+  background: url(../img/store-01.jpg) center/cover;
+}
+
+.section2 {
+  color: #eee;
+  padding-bottom: 100px;
+  position: relative;
+}
+.section2:after {
+  content: "";
+  position: absolute;
+  height: 620px;
+  width: 100%;
+  background: url(../img/bg-menu-01.jpg) center/cover;
+  left: 50%;
+  bottom: -330px;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+.section2 h2 {
+  color: rgb(221, 180, 145);
+  font-size: 2rem;
+  font-family: Allura;
+  font-weight: 500;
+  padding: 60px 0 30px;
+}
+.section2 ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 50%;
+  margin: 30px auto;
+  min-width: 500px;
+}
+.section2 li {
+  border-bottom: 1px solid rgb(182, 182, 182);
+  padding-bottom: 8px;
+}
+.section2 .meals {
+  position: relative;
+  background: #eee;
+  color: #21201e;
+  width: 85%;
+  margin: 0 auto;
+  max-width: 800px;
+  border-top: 4px solid rgb(221, 180, 145);
+  padding: 15px 0;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  z-index: 100;
+}
+.section2 .meals .meal {
+  display: grid;
+  grid-template-columns: 25% 60% 15%;
+  border-bottom: 1px dashed rgb(221, 180, 145);
+  padding: 30px 0;
+  margin: 0 20px;
+}
+.section2 .meals .meal img {
+  border-radius: 50px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -webkit-box-shadow: 0px 1px 10px rgb(221, 180, 145);
+          box-shadow: 0px 1px 10px rgb(221, 180, 145);
+  width: 100%;
+  -ms-flex-item-align: center;
+      align-self: center;
+}
+.section2 .meals .meal .meal-text {
+  text-align: left;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 0 10px;
+  height: 100%;
+}
+.section2 .meals .meal .meal-text h3 {
+  text-transform: uppercase;
+  color: #21201e;
+  font-size: 0.8rem;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+.section2 .meals .meal > p {
+  color: rgb(221, 180, 145);
+  font-weight: 600;
+  font-size: 1.1rem;
+  display: grid;
+  height: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}/*# sourceMappingURL=index.css.map */
