--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,4 +1,4 @@
-@import "./_settings.scss";
+@import "./_settings";
 @import "./layouts/_header";
 @import "./layouts/_section1";
 @import "./layouts/_section2";
