--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -175,6 +175,13 @@ header .header-text div h6 {
   border-radius: 150px;
   border: 1px solid rgb(221, 180, 145);
   margin-bottom: 8px;
+  cursor: pointer;
+}
+.section1 .intro-text img:nth-of-type(2):hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 .section1 .intro-text h4 {
   font-family: Poppins;
@@ -289,4 +296,51 @@ header .header-text div h6 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.section3 {
+  padding: 100px 15px 65px;
+  color: #eee;
+}
+.section3 .form-content {
+  display: grid;
+  grid-template-columns: 30% 70%;
+  background: #eee;
+  max-width: 1050px;
+  margin: 0 auto;
+  border: 1px solid rgb(221, 180, 145);
+}
+.section3 .form-content .hours {
+  padding: 24px;
+  background: black;
+}
+.section3 .form-content .hours .hours-content {
+  border: 1px dashed rgb(221, 180, 145);
+  padding: 20px 0;
+}
+.section3 .form-content .hours .hours-content h3 {
+  font-family: Allura;
+  font-size: 2.5rem;
+  font-weight: 100;
+  color: rgb(221, 180, 145);
+}
+.section3 .form-content .hours .hours-content h4 {
+  font-family: Poppins;
+  margin-top: -16px;
+  letter-spacing: 2px;
+  font-size: 1.3rem;
+}
+.section3 .form-content .hours .hours-content img {
+  margin-top: 5px;
+}
+.section3 .form-content .hours .hours-content h5 {
+  text-transform: uppercase;
+  color: rgb(221, 180, 145);
+  font-family: Poppins;
+  font-weight: 100;
+  font-size: 1.1rem;
+  margin: 30px 0 12px;
+}
+.section3 .form-content .hours .hours-content p {
+  font-size: 0.85rem;
 }/*# sourceMappingURL=index.css.map */
