--- a/assets/styles/layouts/_section1.scss
+++ b/assets/styles/layouts/_section1.scss
@@ -29,6 +29,12 @@
             border-radius: 150px;
             border: 1px solid $color1;
             margin-bottom: 8px;
+            cursor: pointer;
+
+            &:hover{
+                transform: scale(1.2);
+                transition: 0.5s;
+            }
         }
 
         h4 {
