--- a/assets/styles/layouts/_section3.scss
+++ b/assets/styles/layouts/_section3.scss
@@ -51,5 +51,58 @@
                 }
             }
         }
+
+        .form-infos {
+            @include childCenter;
+            padding: 30px 0;
+
+            h2 {
+                font-family: $font1;
+                font-size: 2.5rem;
+                font-weight: 100;
+                color: $color1;
+            }
+
+            h3 {
+                color:$black;
+                margin-top: -18px;
+                font-family: $font2;
+                font-size: 1.8rem;
+            }
+            img{
+                height: 25px;
+                margin: 25px;
+            }
+            .form-inputs{
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);
+                margin-bottom: 30px;
+
+                >*{
+                    padding: 10px 0 ;
+                    margin: 10px;
+                    background: none;
+                    outline: none;
+                    border: none;
+                    border-bottom: 1px solid $grey;
+                }
+            }
+            button{
+                border: none;
+                border-radius: 50px;
+                background: black;
+                color: $color1;
+                padding: 16px 34px;
+                letter-spacing: 4px;
+                font-weight: 700;
+                cursor: pointer;
+                transition: 0.3s;
+
+                &:hover{
+                    transform: translateX(3px);
+                    box-shadow: 0 2px 4px hsla(0, 0%, 0%, 0.605);
+                }
+            }
+        }
     }
 }
