--- a/assets/styles/layouts/_section4.scss
+++ b/assets/styles/layouts/_section4.scss
@@ -26,67 +26,112 @@
         }
 
         .event-grid {
+            border: 1px solid $color1;
             display: grid;
-            grid-template-columns: 58% 42%;
+            grid-template-columns: 50% 1fr;
             grid-template-rows: 1fr 1fr;
             grid-template-areas:
                 "a b"
                 "c b";
-            .date-content{
+            gap: 20px;
+
+
+            .date-content {
                 background: $black;
                 height: 86px;
                 width: 86px;
                 margin: 0 auto;
-                color:$white;
+                color: $white;
                 @include childCenter;
                 flex-direction: column;
                 line-height: 22px;
 
-                h6{
+                h6 {
                     font-size: 1.7rem;
                 }
             }
 
-            .address{
+            .address {
                 background: $white;
 
-                h3{
+                h3 {
                     letter-spacing: 1px;
                     font-size: 1.3rem;
                     font-weight: 500;
                     padding-left: 8px;
                 }
-                p{
+
+                p {
                     font-size: 0.9rem;
                     color: $grey;
                     margin-top: 20px;
                     letter-spacing: 1px;
 
-                    i{
+                    i {
                         margin-right: 3px;
                         font-size: 0.7rem;
                         transform: translateY(-2);
 
-                        &:nth-child(2){
+                        &:nth-child(2) {
                             margin-left: 10px;
                         }
                     }
                 }
-                h5{
+
+                h5 {
                     letter-spacing: 2px;
                     margin-top: 25px;
                 }
             }
+
+            .event-left {
+                display: grid;
+                grid-template-columns: 39% 61%;
+                text-align: left;
+
+                .date {
+                    @include childCenter;
+                }
+
+                .address {
+                    color: $black;
+                    padding: 30px 20px;
+                }
+            }
+
             .event-1 {
                 grid-area: a;
+
+                .date {
+                    background: url(../img/event-01.jpg) center/cover;
+                }
             }
 
             .event-2 {
-                grid-area: b;
+                grid-area: c;
+
+                .date {
+                    background: url(../img/event-02.jpg) center/cover;
+                }
             }
 
             .event-3 {
-                grid-area: c;
+                grid-area: b;
+                background: url(../img/event-03.jpg) center/cover;
+                padding: 25px;
+
+                .address{
+                    height: 100%;
+                    padding: 0 12px;
+
+                    h3{
+                        margin: 40px 0 15px;
+                    }
+                    h5{
+                        padding: 45px 0;
+                    }
+                }
+
             }
         }
     }
