--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -487,7 +487,20 @@ header .header-text div h6 {
 }
 .section4 .events-container .event-grid .address h5 {
   letter-spacing: 2px;
-  margin-top: 25px;
+  margin: 25px auto;
+  text-align: center;
+  border: 1px solid rgb(221, 180, 145);
+  padding: 10px 0 10px 0;
+  width: 50%;
+}
+.section4 .events-container .event-grid .address h5:hover {
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  -webkit-transform: translateX(3px);
+          transform: translateX(3px);
+  -webkit-box-shadow: 0px 1px 5px #21201e;
+          box-shadow: 0px 1px 5px #21201e;
 }
 .section4 .events-container .event-grid .event-left {
   display: grid;
