--- a/assets/styles/layouts/_section4.scss
+++ b/assets/styles/layouts/_section4.scss
@@ -80,7 +80,19 @@
 
                 h5 {
                     letter-spacing: 2px;
-                    margin-top: 25px;
+                    margin: 25px auto;
+                    text-align: center;
+                    border: 1px solid $color1;
+                    padding: 10px 0 10px 0;
+                    width: 50%;
+
+                    &:hover {
+                        cursor: pointer;
+                        transition: 0.3s;
+                        transform: translateX(3px);
+                        box-shadow: 0px 1px 5px $black;
+
+                    }
                 }
             }
 
@@ -120,15 +132,17 @@
                 background: url(../img/event-03.jpg) center/cover;
                 padding: 25px;
 
-                .address{
+                .address {
                     height: 100%;
                     padding: 0 12px;
 
-                    h3{
+                    h3 {
                         margin: 40px 0 15px;
                     }
-                    h5{
+
+                    h5 {
                         padding: 45px 0;
+
                     }
                 }
 
