--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -43,6 +43,11 @@ header nav {
   max-width: 1100px;
   margin: 0 auto;
 }
+@media screen and (max-width: 680px) {
+  header nav {
+    grid-template-columns: 50% 10% 40%;
+  }
+}
 header nav .logo {
   font-family: Allura;
   font-weight: 100;
@@ -59,15 +64,20 @@ header nav ul {
   -ms-flex-pack: distribute;
       justify-content: space-around;
   text-transform: uppercase;
-  font-size: 0.7rem;
+  font-size: 0.9rem;
   padding: 0 30px;
 }
-header nav li {
+@media screen and (max-width: 680px) {
+  header nav ul {
+    visibility: hidden;
+  }
+}
+header li {
   cursor: pointer;
   width: 100%;
   height: 100%;
 }
-header nav li:hover {
+header li:hover {
   -webkit-transition: 0.3s;
   transition: 0.3s;
   -webkit-transform: scale(1.3);
@@ -76,7 +86,7 @@ header nav li:hover {
   border: 1px solid #eee;
   border-radius: 15px;
 }
-header nav .nav-icons {
+header .nav-icons {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -87,16 +97,17 @@ header nav .nav-icons {
       justify-content: space-around;
   font-size: 0.8rem;
 }
-header nav .nav-icons i {
+header .nav-icons i {
   -webkit-transition: 0.2s;
   transition: 0.2s;
   cursor: pointer;
 }
-header nav .nav-icons i:hover {
+header .nav-icons i:hover {
   -webkit-transform: scale(1.3);
           transform: scale(1.3);
 }
-header .header-text {
+
+.header-text {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -108,17 +119,17 @@ header .header-text {
           align-items: center;
   height: 88vh;
 }
-header .header-text div {
+.header-text div {
   margin-top: -150px;
 }
-header .header-text div h2 {
+.header-text div h2 {
   font-family: Allura;
   font-size: 3.5rem;
   font-weight: 100;
   color: rgb(221, 180, 145);
   text-shadow: 0px 2px 5px #21201e;
 }
-header .header-text div h1 {
+.header-text div h1 {
   font-size: 4.5rem;
   letter-spacing: 10px;
   font-weight: 700;
@@ -127,7 +138,13 @@ header .header-text div h1 {
   -webkit-box-shadow: 0px 1px 10px rgb(221, 180, 145);
           box-shadow: 0px 1px 10px rgb(221, 180, 145);
 }
-header .header-text div img {
+@media screen and (max-width: 680px) {
+  .header-text div h1 {
+    font-size: 2rem;
+    margin-top: -15px;
+  }
+}
+.header-text div img {
   height: 50px;
   margin: 20px 0;
   border-radius: 150px;
@@ -136,7 +153,7 @@ header .header-text div img {
           box-shadow: 0px 1px 10px #eee;
   background: #21201e;
 }
-header .header-text div h6 {
+.header-text div h6 {
   font-size: 1rem;
   letter-spacing: 6px;
   font-weight: 200;
@@ -152,6 +169,11 @@ header .header-text div h6 {
   display: grid;
   grid-template-columns: 50% 50%;
   background: #eee;
+}
+@media screen and (max-width: 680px) {
+  .section1 {
+    grid-template-columns: 1fr;
+  }
 }
 .section1 .intro-text {
   margin: 15px;
@@ -195,6 +217,11 @@ header .header-text div h6 {
 .section1 .intro-pic {
   background: url(../img/store-01.jpg) center/cover;
 }
+@media screen and (max-width: 680px) {
+  .section1 .intro-pic {
+    display: none;
+  }
+}
 
 .section2 {
   color: #eee;
@@ -232,6 +259,13 @@ header .header-text div h6 {
   margin: 30px auto;
   min-width: 500px;
 }
+@media screen and (max-width: 680px) {
+  .section2 ul {
+    min-width: 200px;
+    width: 90%;
+    font-size: 0.75rem;
+  }
+}
 .section2 li {
   border-bottom: 1px solid rgb(182, 182, 182);
   padding-bottom: 8px;
@@ -248,6 +282,11 @@ header .header-text div h6 {
   display: grid;
   grid-template-columns: 50% 50%;
   z-index: 100;
+}
+@media screen and (max-width: 680px) {
+  .section2 .meals {
+    grid-template-columns: 1fr;
+  }
 }
 .section2 .meals .meal {
   display: grid;
@@ -310,6 +349,11 @@ header .header-text div h6 {
   max-width: 1050px;
   margin: 0 auto;
   border: 1px solid rgb(221, 180, 145);
+}
+@media screen and (max-width: 800px) {
+  .section3 .form-content {
+    grid-template-columns: 1fr;
+  }
 }
 .section3 .form-content .hours {
   padding: 24px;
@@ -378,6 +422,11 @@ header .header-text div h6 {
   grid-template-columns: repeat(3, 1fr);
   margin-bottom: 30px;
 }
+@media screen and (max-width: 680px) {
+  .section3 .form-content .form-infos .form-inputs {
+    grid-template-columns: 1fr;
+  }
+}
 .section3 .form-content .form-infos .form-inputs > * {
   padding: 10px 0;
   margin: 10px;
@@ -436,6 +485,11 @@ header .header-text div h6 {
   grid-template-rows: 1fr 1fr;
   grid-template-areas: "a b" "c b";
   gap: 20px;
+}
+@media screen and (max-width: 680px) {
+  .section4 .events-container .event-grid {
+    display: block;
+  }
 }
 .section4 .events-container .event-grid .date-content {
   background: #21201e;
@@ -609,7 +663,7 @@ header .header-text div h6 {
 }
 
 footer {
-  background: url(../img/gb-footter.jpg) center/cover;
+  background: url(../img/bg-footer.jpg) center/cover;
   text-align: left;
   padding: 65px 32px;
   color: #eee;
@@ -619,6 +673,11 @@ footer .footer-content {
   margin: 0 auto;
   display: grid;
   grid-template-columns: 50% 50%;
+}
+@media screen and (max-width: 680px) {
+  footer .footer-content {
+    grid-template-columns: 1fr;
+  }
 }
 footer .footer-content .left-part {
   padding-right: 30px;
@@ -640,6 +699,11 @@ footer .footer-content .right-part {
   display: grid;
   grid-template-rows: 1fr 1fr;
 }
+@media screen and (max-width: 680px) {
+  footer .footer-content .right-part {
+    padding-left: 20px;
+  }
+}
 footer .footer-content .right-part h3 {
   font-size: 0.85rem;
 }
@@ -650,11 +714,21 @@ footer .footer-content .right-part input {
   padding: 7px 13px;
   width: 250px;
 }
+@media screen and (max-width: 680px) {
+  footer .footer-content .right-part input {
+    width: 150px;
+  }
+}
 footer .footer-content .right-part .follow-us {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin-top: 50px;
+}
+@media screen and (max-width: 680px) {
+  footer .footer-content .right-part .follow-us h3 {
+    display: none;
+  }
 }
 footer .footer-content .right-part .follow-us ul {
   display: -webkit-box;
