--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -1,5 +1,5 @@
 footer {
-    background: url(../img/gb-footter.jpg) center/cover;
+    background: url(../img/bg-footer.jpg) center/cover;
     text-align: left;
     padding: 65px 32px;
     color: $white;
@@ -9,6 +9,10 @@ footer {
         margin: 0 auto;
         display: grid;
         grid-template-columns: 50% 50%;
+
+        @media screen and (max-width: 680px){
+            grid-template-columns: 1fr;
+        }
 
         .left-part {
             padding-right: 30px;
@@ -35,6 +39,10 @@ footer {
             display: grid;
             grid-template-rows: 1fr 1fr;
 
+            @media screen and (max-width: 680px){
+                padding-left: 20px;
+            }
+
             h3 {
                 font-size: 0.85rem;
             }
@@ -45,11 +53,21 @@ footer {
                 border: 1px solid rgba(116, 114, 69, 0.151);
                 padding: 7px 13px;
                 width: 250px;
+
+                @media screen and (max-width: 680px){
+                    width: 150px;
+                }
             }
 
             .follow-us {
                 display: flex;
                 margin-top: 50px;
+
+                h3{
+                    @media screen and (max-width: 680px){
+                        display: none;
+                    }
+                }
 
                 ul {
                     @include alignChildren(space-around);
