--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -11,6 +11,12 @@ header {
         max-width: 1100px;
         margin: 0 auto;
 
+        @media screen and (max-width: 680px) {
+            grid-template-columns: 50% 10% 40%;
+        }
+
+        ;
+
         .logo {
             font-family: $font1;
             font-weight: 100;
@@ -21,83 +27,97 @@ header {
         ul {
             @include alignChildren(space-around);
             text-transform: uppercase;
-            font-size: 0.7rem;
+            font-size: 0.9rem;
             padding: 0 30px;
-        }
 
-        li {
-            cursor: pointer;
-            width: 100%;
-            height: 100%;
-
-            &:hover {
-                transition: 0.3s;
-                transform: scale(1.3);
-                background-color: $color1;
-                border: 1px solid $white;
-                border-radius: 15px;
+            @media screen and (max-width: 680px) {
+                visibility: hidden;
             }
-        }
 
-        .nav-icons {
-            @include alignChildren(space-around);
-            font-size: 0.8rem;
+            ;
 
-            i {
-                transition: 0.2s;
-                cursor: pointer;
-
-                &:hover {
-                    transform: scale(1.3);
-                }
-            }
         }
     }
 
-    .header-text {
-        @include childCenter;
-        height: 88vh;
+    li {
+        cursor: pointer;
+        width: 100%;
+        height: 100%;
 
-        div {
-            margin-top: -150px;
+        &:hover {
+            transition: 0.3s;
+            transform: scale(1.3);
+            background-color: $color1;
+            border: 1px solid $white;
+            border-radius: 15px;
+        }
+    }
 
-            h2 {
-                font-family: $font1;
-                font-size: 3.5rem;
-                font-weight: 100;
-                color: $color1;
-                text-shadow: 0px 2px 5px $black;
+    .nav-icons {
+        @include alignChildren(space-around);
+        font-size: 0.8rem;
+
+        i {
+            transition: 0.2s;
+            cursor: pointer;
+
+            &:hover {
+                transform: scale(1.3);
+            }
+        }
+    }
+}
+
+.header-text {
+    @include childCenter;
+    height: 88vh;
+
+    div {
+        margin-top: -150px;
+
+        h2 {
+            font-family: $font1;
+            font-size: 3.5rem;
+            font-weight: 100;
+            color: $color1;
+            text-shadow: 0px 2px 5px $black;
+        }
+
+        h1 {
+            font-size: 4.5rem;
+            letter-spacing: 10px;
+            font-weight: 700;
+            margin-top: -28px;
+            font-family: $font2;
+            box-shadow: 0px 1px 10px $color1;
+
+            @media screen and (max-width: 680px) {
+                font-size: 2rem;
+                margin-top: -15px;
             }
 
-            h1 {
-                font-size: 4.5rem;
-                letter-spacing: 10px;
-                font-weight: 700;
-                margin-top: -28px;
-                font-family: $font2;
-                box-shadow: 0px 1px 10px $color1;
-            }
+            ;
+        }
 
-            img {
-                
-                height: 50px;
-                margin:20px 0;
-                border-radius: 150px;
-                border: 1px solid $color1;
-                box-shadow: 0px 1px 10px $white;
-                background: $black;
-            }
+        img {
 
-            h6 {
-                font-size: 1rem;
-                letter-spacing: 6px;
-                font-weight: 200;
-                padding: 10px;
-                border: 1px solid $color1;
-                text-shadow: 1px 1px 2px $black;
-                box-shadow: 0px 1px 10px $white;
-                background: $black;
-            }
+            height: 50px;
+            margin: 20px 0;
+            border-radius: 150px;
+            border: 1px solid $color1;
+            box-shadow: 0px 1px 10px $white;
+            background: $black;
+        }
+
+        h6 {
+            font-size: 1rem;
+            letter-spacing: 6px;
+            font-weight: 200;
+            padding: 10px;
+            border: 1px solid $color1;
+            text-shadow: 1px 1px 2px $black;
+            box-shadow: 0px 1px 10px $white;
+            background: $black;
         }
     }
 }
