--- a/assets/styles/layouts/_section1.scss
+++ b/assets/styles/layouts/_section1.scss
@@ -3,6 +3,12 @@
     grid-template-columns: 50% 50%;
     background: $white;
 
+    @media screen and (max-width: 680px) {
+        grid-template-columns: 1fr;
+    }
+
+    ;
+
     .intro-text {
         margin: 15px;
         padding: 30px 15px;
@@ -31,7 +37,7 @@
             margin-bottom: 8px;
             cursor: pointer;
 
-            &:hover{
+            &:hover {
                 transform: scale(1.2);
                 transition: 0.5s;
             }
@@ -50,6 +56,9 @@
 
     .intro-pic {
         background: url(../img/store-01.jpg) center/cover;
-    }
 
+        @media screen and (max-width: 680px) {
+            display: none;
+        }
+    }
 }
