--- a/assets/styles/layouts/_section3.scss
+++ b/assets/styles/layouts/_section3.scss
@@ -10,6 +10,10 @@
         margin: 0 auto;
         border: 1px solid $color1;
 
+        @media screen and (max-width: 800px){
+            grid-template-columns: 1fr;
+        }
+
         .hours {
             padding: 24px;
             background: black;
@@ -77,6 +81,10 @@
                 display: grid;
                 grid-template-columns: repeat(3, 1fr);
                 margin-bottom: 30px;
+
+                @media screen and (max-width: 680px){
+                    grid-template-columns: 1fr;
+                }
 
                 >*{
                     padding: 10px 0 ;
